[gd_scene load_steps=7 format=3 uid="uid://dm5kiqh62u0tm"]

[ext_resource type="Script" path="res://Scripts/controls.gd" id="1_fdod2"]
[ext_resource type="FontFile" uid="uid://dvb8i8opar3p4" path="res://Assets/Fonts/OpenSans-Regular.ttf" id="2_eoy3y"]
[ext_resource type="Texture2D" uid="uid://l5bap8wikpnh" path="res://Assets/Images/gamepad_2.webp" id="2_is3j5"]
[ext_resource type="FontFile" uid="uid://s448mi5ku8ny" path="res://Assets/Fonts/NotoSansMono-Regular.ttf" id="2_qx60u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_po6lv"]
bg_color = Color(0, 0, 0, 0.784314)

[sub_resource type="LabelSettings" id="LabelSettings_40dr6"]
font = ExtResource("2_qx60u")
font_size = 24

[node name="Controls" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_po6lv")
script = ExtResource("1_fdod2")

[node name="LabelEscape" type="Label" parent="."]
layout_mode = 2
offset_left = 100.0
offset_top = 700.0
offset_right = 317.0
offset_bottom = 728.0
text = "TR_ESCAPE_BACK"
label_settings = SubResource("LabelSettings_40dr6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -425.0
offset_right = 500.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_is3j5")

[node name="LabelMove" type="Label" parent="TextureRect"]
custom_minimum_size = Vector2(135, 0)
layout_mode = 0
offset_top = 252.0
offset_right = 135.0
offset_bottom = 275.0
theme_override_fonts/font = ExtResource("2_qx60u")
text = "TR_MOVE_AIM"
horizontal_alignment = 2

[node name="LabelCursorMode" type="Label" parent="TextureRect"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 434.0
offset_top = 102.0
offset_right = 634.0
offset_bottom = 125.0
theme_override_fonts/font = ExtResource("2_qx60u")
text = "TR_CURSOR_MODE"
horizontal_alignment = 1

[node name="LabelChange" type="Label" parent="TextureRect"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 0
offset_left = 15.0
offset_top = 161.0
offset_right = 165.0
offset_bottom = 184.0
theme_override_fonts/font = ExtResource("2_qx60u")
text = "TR_CHANGE"
horizontal_alignment = 2

[node name="LabelBullet" type="Label" parent="TextureRect"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 0
offset_left = 15.0
offset_top = 190.0
offset_right = 165.0
offset_bottom = 213.0
theme_override_fonts/font = ExtResource("2_qx60u")
text = "TR_BULLET"
horizontal_alignment = 2

[node name="LabelFlip" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 265.0
offset_top = 85.0
offset_right = 465.0
offset_bottom = 111.0
theme_override_fonts/font = ExtResource("2_qx60u")
text = "TR_FLIP_DIRECTION"
horizontal_alignment = 1

[node name="LabelFlip2" type="Label" parent="TextureRect"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 585.0
offset_top = 85.0
offset_right = 785.0
offset_bottom = 108.0
theme_override_fonts/font = ExtResource("2_qx60u")
text = "TR_FLIP_DIRECTION"
horizontal_alignment = 1

[node name="LabelChange2" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 895.0
offset_top = 161.0
offset_right = 987.0
offset_bottom = 184.0
theme_override_fonts/font = ExtResource("2_qx60u")
text = "TR_CHANGE"

[node name="LabelBullet2" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 895.0
offset_top = 190.0
offset_right = 979.0
offset_bottom = 213.0
theme_override_fonts/font = ExtResource("2_qx60u")
text = "TR_BULLET"

[node name="LabelFire" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 912.0
offset_top = 332.0
offset_right = 1062.0
offset_bottom = 356.0
theme_override_fonts/font = ExtResource("2_qx60u")
text = "TR_FIRE"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -319.0
offset_bottom = -173.0
grow_horizontal = 2
grow_vertical = 0

[node name="HB" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24
alignment = 1

[node name="VB" type="VBoxContainer" parent="Control/HB"]
layout_mode = 2

[node name="Label1" type="Label" parent="Control/HB/VB"]
layout_mode = 2
text = "TR_KEYBOARD_1_C"
label_settings = SubResource("LabelSettings_40dr6")

[node name="Label2" type="Label" parent="Control/HB/VB"]
layout_mode = 2
text = "TR_W_AIM_UP"
label_settings = SubResource("LabelSettings_40dr6")

[node name="Label3" type="Label" parent="Control/HB/VB"]
layout_mode = 2
text = "TR_S_AIM_DOWN"
label_settings = SubResource("LabelSettings_40dr6")

[node name="Label4" type="Label" parent="Control/HB/VB"]
layout_mode = 2
text = "TR_A_MOVE_LEFT"
label_settings = SubResource("LabelSettings_40dr6")

[node name="Label5" type="Label" parent="Control/HB/VB"]
layout_mode = 2
text = "TR_D_MOVE_RIGHT"
label_settings = SubResource("LabelSettings_40dr6")

[node name="VB2" type="VBoxContainer" parent="Control/HB"]
layout_mode = 2

[node name="Label1" type="Label" parent="Control/HB/VB2"]
layout_mode = 2
label_settings = SubResource("LabelSettings_40dr6")

[node name="Label2" type="Label" parent="Control/HB/VB2"]
layout_mode = 2
text = "TR_Q_CHANGE_UP"
label_settings = SubResource("LabelSettings_40dr6")

[node name="Label3" type="Label" parent="Control/HB/VB2"]
layout_mode = 2
text = "TR_E_CHANGE_DOWN"
label_settings = SubResource("LabelSettings_40dr6")

[node name="Label4" type="Label" parent="Control/HB/VB2"]
layout_mode = 2
text = "TR_TAB_FLIP"
label_settings = SubResource("LabelSettings_40dr6")

[node name="Label5" type="Label" parent="Control/HB/VB2"]
layout_mode = 2
text = "TR_SPACE_FIRE"
label_settings = SubResource("LabelSettings_40dr6")

[node name="Label6" type="Label" parent="Control/HB/VB2"]
layout_mode = 2
text = "TR_KEY_C"
label_settings = SubResource("LabelSettings_40dr6")

[node name="Control" type="Control" parent="Control/HB"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="VB3" type="VBoxContainer" parent="Control/HB"]
layout_mode = 2

[node name="Label1" type="Label" parent="Control/HB/VB3"]
layout_mode = 2
text = "TR_KEYBOARD_2_C"
label_settings = SubResource("LabelSettings_40dr6")

[node name="Label2" type="Label" parent="Control/HB/VB3"]
layout_mode = 2
text = "TR_U_AIM_UP"
label_settings = SubResource("LabelSettings_40dr6")

[node name="Label3" type="Label" parent="Control/HB/VB3"]
layout_mode = 2
text = "TR_D_AIM_DOWN"
label_settings = SubResource("LabelSettings_40dr6")

[node name="Label4" type="Label" parent="Control/HB/VB3"]
layout_mode = 2
text = "TR_L_MOVE_LEFT"
label_settings = SubResource("LabelSettings_40dr6")

[node name="Label5" type="Label" parent="Control/HB/VB3"]
layout_mode = 2
text = "TR_R_MOVE_RIGHT"
label_settings = SubResource("LabelSettings_40dr6")

[node name="VB4" type="VBoxContainer" parent="Control/HB"]
layout_mode = 2

[node name="Label1" type="Label" parent="Control/HB/VB4"]
layout_mode = 2
label_settings = SubResource("LabelSettings_40dr6")

[node name="Label2" type="Label" parent="Control/HB/VB4"]
layout_mode = 2
text = "TR_B_CHANGE_UP"
label_settings = SubResource("LabelSettings_40dr6")

[node name="Label3" type="Label" parent="Control/HB/VB4"]
layout_mode = 2
text = "TR_B_CHANGE_DOWN"
label_settings = SubResource("LabelSettings_40dr6")

[node name="Label4" type="Label" parent="Control/HB/VB4"]
layout_mode = 2
text = "TR_B_FLIP"
label_settings = SubResource("LabelSettings_40dr6")

[node name="Label5" type="Label" parent="Control/HB/VB4"]
layout_mode = 2
text = "TR_B_FIRE"
label_settings = SubResource("LabelSettings_40dr6")

[node name="Label6" type="Label" parent="Control/HB/VB4"]
layout_mode = 2
text = "TR_KEY_NINE"
label_settings = SubResource("LabelSettings_40dr6")

[node name="CloseButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_eoy3y")
theme_override_font_sizes/font_size = 24
text = "TR_CLOSE"

[node name="Lines" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LineLB" type="ColorRect" parent="Lines"]
layout_mode = 0
offset_left = 600.0
offset_top = 301.0
offset_right = 795.0
offset_bottom = 303.0

[node name="LineLT" type="ColorRect" parent="Lines"]
layout_mode = 0
offset_left = 824.0
offset_top = 226.0
offset_right = 826.0
offset_bottom = 278.0

[node name="LineMenu" type="ColorRect" parent="Lines"]
layout_mode = 0
offset_left = 994.0
offset_top = 242.0
offset_right = 996.0
offset_bottom = 280.0

[node name="LineMenu2" type="ColorRect" parent="Lines/LineMenu"]
layout_mode = 0
offset_top = 38.0
offset_right = 40.0
offset_bottom = 40.0

[node name="LineMenu3" type="ColorRect" parent="Lines/LineMenu"]
layout_mode = 0
offset_left = 39.0
offset_top = 38.0
offset_right = 41.0
offset_bottom = 161.0

[node name="LineRT" type="ColorRect" parent="Lines"]
layout_mode = 0
offset_left = 1144.0
offset_top = 226.0
offset_right = 1146.0
offset_bottom = 278.0

[node name="LineRB" type="ColorRect" parent="Lines"]
layout_mode = 0
offset_left = 1170.0
offset_top = 301.0
offset_right = 1370.0
offset_bottom = 303.0

[node name="LineFire" type="ColorRect" parent="Lines"]
layout_mode = 0
offset_left = 1190.0
offset_top = 457.0
offset_right = 1365.0
offset_bottom = 459.0

[node name="LineFire2" type="ColorRect" parent="Lines/LineFire"]
layout_mode = 0
offset_left = 35.0
offset_top = -37.0
offset_right = 135.0
offset_bottom = -35.0

[node name="LineFire3" type="ColorRect" parent="Lines/LineFire"]
layout_mode = 0
offset_left = 35.0
offset_top = 40.0
offset_right = 135.0
offset_bottom = 42.0

[node name="LineFire4" type="ColorRect" parent="Lines/LineFire"]
layout_mode = 0
offset_left = 133.0
offset_top = -35.0
offset_right = 135.0
offset_bottom = 40.0

[node name="LineDirL" type="ColorRect" parent="Lines"]
layout_mode = 0
offset_left = 600.0
offset_top = 377.0
offset_right = 710.0
offset_bottom = 379.0

[node name="LineDirL2" type="ColorRect" parent="Lines/LineDirL"]
layout_mode = 0
offset_left = 109.0
offset_right = 111.0
offset_bottom = 160.0

[node name="LineDirL3" type="ColorRect" parent="Lines/LineDirL"]
layout_mode = 0
offset_left = 109.0
offset_top = 44.0
offset_right = 139.0
offset_bottom = 46.0

[node name="LineDirL4" type="ColorRect" parent="Lines/LineDirL"]
layout_mode = 0
offset_left = 109.0
offset_top = 159.0
offset_right = 224.0
offset_bottom = 161.0

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
